fix(mm): fix label visibility - UFTABI-6971 (#5887)
* fix(mm): fix label visibility - UFTABI-6971

* fix(ea): always show steps on desktop

--- a/apps/mm/src/styles.scss
+++ b/apps/mm/src/styles.scss
@@ -48,9 +48,15 @@ mat-dialog-container {
 }
 /*
   weird border issue Angular material with Tailwind https://github.com/tailwindlabs/tailwindcss/discussions/9993
-  in preflight style of tailwinds sets border-style to solid, other way to fix it, would be to adjust 
+  in preflight style of tailwinds sets border-style to solid, other way to fix it, would be to adjust
   preflight, which can case other issues for tailwind
   */
 .mdc-notched-outline__notch {
   border-right: none !important;
+}
+
+mat-horizontal-stepper.primary-stepper
+  mat-step-header[ng-reflect-selected='false']
+  .mat-step-label {
+  @apply hidden md:block;
 }
